--- a/xapos327/src/main/resources/application.properties
+++ b/xapos327/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+server.port = 8181
+
+spring.datasource.url = jdbc:postgresql://localhost:5433/xapos327
+spring.datasource.username = postgres
+spring.datasource.password = aflaha
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.temp.use_jdbc_metadata_defaults=false
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
